fixed aspect ratio of header video on mobile

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -64,23 +64,9 @@
   color: #fff;
 }
 
-.headerVideo {
+.playerWrapper {
   width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.headerVideoContainer {
-  width: 100%;
-  height: auto;
   margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 20px;
-  overflow: hidden;
 }
 
 @media screen and (max-width: 992px) {
@@ -101,7 +87,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 85%;
+    width: 100%;
     margin: 0 auto;
   }
 
@@ -109,6 +95,7 @@
     height: auto;
     display: block;
     min-height: 250px;
+    text-align: center;
   }
 
   .headerCopy h1 {
@@ -138,23 +125,18 @@
     display: none;
   }
 
-  .headerVideo {
-    height: auto;
-    display: block;
+  .playerWrapper {
+    width: 100%;
+    padding-top: 56.25%;
+    height: 0px;
+    position: relative;
   }
 
-  .headerVideoContainer {
+  .playerWrapper iframe {
     width: 100%;
     height: 100%;
-    margin: 0 auto;
-    display: block;
-    border-radius: 0;
-    overflow: hidden;
-  }
-
-  .headerVideoContainer iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
